DigIt CHANGE LOG
======================

2025/03/
        05 Added Path_DefSession_XX Vars;
	   SourceFiles/CapturedFiles works in FullPath;
	   Renamed Session path tmp to Scan and added Pictures;
	   Destination Path is Relative to Session (Path_Session_Pictures); 
	   XML_SaveSessionFile Copy/Move only Session Files and convert it to new Session if Relative;
2025/02/
        28 Added Use of Relative Path in Sources and MainForm;
           Writed XML_SaveSessionFile;
           Fixed error when loading session without thumb file;
        27 Introduced use of Path based Session:
             XML_Load/Save use Path_Session as base Path;
	     Added Session Paths to Bridge;
	     Sources use Path_Session_Temp as temp Path;
	     Renamed xml/thumb files to digs,digt;
	     Renamed Project actions to Work Session;
        26 Use of BGRAImageFormat Writer intestead of Ext;
	   Updated Dest Save Files Settings Form;
	   Added PDF Info Form;
	   Updated Version Info and Setup;
        25 Tested and fixed user cancel operations;
           Added TDigIt_Progress OnCancelClick event and IDigIt_Progress.Cancelled;
        24 LoadSaveWork in separate methods;
	   Captured Files Toolbar placed above the list horizontally;
	   Eliminated redundant Session Saves;
        21 Added Captured Toolbar Actions Enabled; 
           Added Captured Toolbar Delete/DeleteAll; 
        20 UI Adjustments; Load/SaveWork Dialog=mrNo delete the xml and thumbs file
        07 Added Linux Project (Gtk2);
	   GUI Adjustments for Gtk2 support;
2024/12/
        20 Use of CapturedFiles Array;
	   Deleted OwnerDraw in lvCaptured;
	   Use of ImageList Add/InsertProportionally for Thumbnails;
	   Load/Save Thumbnails from a file;
	   Adjustments in GoBack/SaveCallback indexes;
	   Updated Folder Source;
	   Updated Twain Source to use Download;
	   Updated Twain 32bit Server to use Download;

        12 First Porting of Source_Twain to new interfaces structure;
	   Added Drivers file for WSD Scanners;